...
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_poster"
        app:layout_constraintTop_toTopOf="@+id/iv_poster"
        tools:text="해리 포터와 마법사의 돌" />

    <TextView
        android:id="@+id/tv_screen_date_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_screen_running_time_guide"
        app:layout_constraintStart_toEndOf="@+id/tv_screen_running_time_guide"
        app:layout_constraintTop_toTopOf="@+id/tv_screen_running_time_guide"
        tools:text="152분" />

    <Button
        android:id="@+id/btn_reserve_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
...
