...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sv_movie_info">

        <TableRow>

            <Spinner
                android:id="@+id/sp_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="26dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/sp_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </TableRow>

...
