...

            <View
                android:layout_width="match_parent"
                android:layout_height="27dp" />

            <TextView
                android:id="@+id/reservation_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                tools:text="해리 포터와 마법사의 돌"
                android:textSize="24sp"
                android:textStyle="bold" />
...
