<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/booking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/notice_text_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/purple_300"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/movie_poster"
            app:layout_constraintHeight_percent="0.80"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/booking_information_text_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4">

        <TextView
            android:id="@+id/movie_title"
            style="@style/MovieBookingTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"
            tools:text="해리 포터와 마법사의 돌"/>


        <TextView
            android:id="@+id/movie_date"
            style="@style/MovieBookingSubTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_title"
            tools:text="상영일: 2025.04.01"/>

        <TextView
            android:id="@+id/movie_running_time"
            style="@style/MovieBookingSubTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_date"
            tools:text="러닝타임: 125분"/>

        <Spinner
            android:id="@+id/date_picker"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/minus_member_count"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" />

        <Spinner
            android:id="@+id/time_picker"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="@id/date_picker"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"/>

        <Button
            android:id="@+id/minus_member_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_rounded_bg"
            android:backgroundTint="@color/purple_500"
            android:gravity="center"
            android:text="-"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/booking_complete_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.014"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/member_count"
            style="@style/MovieBookingTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/booking_complete_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="2" />

        <Button
            android:id="@+id/plus_member_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_rounded_bg"
            android:backgroundTint="@color/purple_500"
            android:gravity="center"
            android:text="+"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/booking_complete_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.985"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/booking_complete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/button_rounded_bg"
            android:backgroundTint="@color/purple_500"
            android:text="선택 완료"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="28dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
